# OceanKiteEducation

./: .gitignore  README.md  commitlint.config.js  index.html  package.json  pnpm-lock.yaml  stylelint.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
.husky/: commit-msg  pre-commit
locales/: en.yaml  zh-CN.yaml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  utils.rs
src/components/: LanguageSwitcher.vue  ThemeChange.vue
src/components/ui/alert/: index.ts
src/components/ui/auto-form/: AutoForm.vue  AutoFormField.vue  AutoFormFieldArray.vue  AutoFormFieldBoolean.vue  AutoFormFieldDate.vue  AutoFormFieldEnum.vue  AutoFormFieldFile.vue  AutoFormFieldInput.vue  AutoFormFieldNumber.vue  AutoFormFieldObject.vue  AutoFormLabel.vue  constant.ts  dependencies.ts  interface.ts  utils.ts
src/components/ui/badge/: index.ts
src/components/ui/button/: index.ts
src/components/ui/calendar/: Calendar.vue  CalendarCell.vue  (+6 more)
src/layout/: index.vue  types.ts
src/layout/hooks/: useTranslationLang.ts
src/plugins/: i18n.ts
src/router/: index.ts  utils.ts
src/router/modules/: home.ts  remaining.ts
src/store/modules/: app.ts  epTheme.ts  multiTags.ts  permission.ts  settings.ts  sidebar.ts  user.ts
src/style/: index.scss
src/utils/: responsive.ts
src/utils/http/: index.ts
src/utils/localforage/: types.d.ts
src/views/dicom/: index.vue
src/views/hl7/: index.vue
types/: global.d.ts  router.d.ts
(+74 files in other folders)
