[package]
name = "ocean-kite-education"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ocean_kite_education_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
docx-rs = "0.4"
rand = "0.8"
chrono = "0.4"

[tauri.allowlist]
fs = true # 允许文件系统访问
[tauri.fs.scope]
# 允许访问的路径，`$RESOURCE` 表示资源目录
read = ["$RESOURCE/*"]
write = ["$RESOURCE/database/*"]
